--- a/PMDM/T2/Login/app/src/main/AndroidManifest.xml
+++ b/PMDM/T2/Login/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.Listados"
         tools:targetApi="31">
         <activity
-            android:name=".SecondActivity"
+            android:name=".ui.activities.SecondActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
