--- a/PMDM/curso2425/T2/Seleccion/app/src/main/AndroidManifest.xml
+++ b/PMDM/curso2425/T2/Seleccion/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Seleccion"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".CochesAcivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false"/>
+
+
     </application>
 
 </manifest>
