--- a/AD/codigos2526/T1/FlujosFicheros/pom.xml
+++ b/AD/codigos2526/T1/FlujosFicheros/pom.xml
@@ -20,6 +20,11 @@
             <version>1.18.42</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.20.0</version>
+        </dependency>
     </dependencies>
 
 </project>
